--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,15 @@ omegaconf = "^2.3.0"
 pillow = "^10.2.0"
 torchvision = "^0.17.0"
 tqdm = "^4.66.2"
+pycocotools = "^2.0.7"
+opencv-python = "^4.9.0.80"
+matplotlib = "^3.8.3"
+timm = "^0.9.16"
+transformers = "^4.37.2"
+mlx-lm = "^0.0.13"
+mlx = "^0.4.0"
+dvc = "^3.30.0"
+dvclive = "^3.30.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
