--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,29 +13,29 @@ milvus = "^2.3.5"
 numpy = "^1.26.4"
 omegaconf = "^2.3.0"
 pillow = "^10.2.0"
-torchvision = "^0.17.0"
+torch = ">=2.6.0,<3.0.0"
+torchserve = ">=0.8.1"
+torchmetrics = ">=1.6.1,<2.0.0"
+torchvision = ">=0.21.0,<0.22.0"
 tqdm = "^4.66.2"
 pycocotools = "^2.0.7"
 opencv-python = "^4.9.0.80"
 matplotlib = "^3.8.3"
 timm = "^0.9.16"
 transformers = "^4.37.2"
-mlx-lm = "^0.0.13"
-mlx = "^0.4.0"
 dvc = "^3.30.0"
 dvclive = "^3.30.0"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 selenium = "^4.22.0"
 moviepy = "^1.0.3"
-torchserve = "0.8.1"
 chromadb = "^0.5.23"
 flask = "^3.1.0"
 diffusers = "^0.32.1"
 accelerate = "^1.2.1"
 torch-model-archiver = "^0.12.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
 
 [[tool.poetry.packages]]
